--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gh"
   ],
   "dependencies": {
-    "gh-got": "^2.3.0",
+    "gh-got": "^2.4.0",
+    "latest-push": "^0.3.1",
     "pinkie-promise": "^2.0.0"
   },
   "devDependencies": {
