--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "github.com/SamVerschueren"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
     "test": "xo && ava"
@@ -26,12 +26,14 @@
     "gh"
   ],
   "dependencies": {
-    "gh-got": "^2.4.0",
-    "latest-push": "^0.3.1",
-    "pinkie-promise": "^2.0.0"
+    "gh-got": "^4.0.0",
+    "latest-push": "^1.0.0"
   },
   "devDependencies": {
     "ava": "*",
     "xo": "*"
+  },
+  "xo": {
+    "esnext": true
   }
 }
